2010-06-21  Peter Schueller <ps@kr.tuwien.ac.at>

	* include/Global.h: Added commandline option for enabling rewriters,
	normalized names for plugin commandline options.
	* include/MCSdiagexplPlugin.h: Likewise.
	* src/MCSdiagexplPlugin.cpp: Likewise.
	* src/Global.cpp: Likewise.
	* examples/mcsequilibriumtests.test: Likewise.

	* testsuite/Makefile.am: Allowing test specification to specify rewriting.

2010-06-16  Peter Schueller <ps@kr.tuwien.ac.at>

	* testsuite/Makefile.am: Fixing absolute vs. relative paths.
	* testsuite/run-dlvhex-tests.sh: Likewise.

	* examples/Makefile.am: Distributing all files required for testing.

	* examples/mcsequilibriumtests.test: Registered new testcases.
	* examples/medExample/dmem_opeq.out: Likewise.
	* examples/independent_inc1/dmem_opeq.out: Likewise.

2010-06-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac (BOOST_REQUIRE): Require boost >= 1.41.

2010-04-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/Makefile.am (AUTOMAKE_OPTIONS): Remove.
	* src/Makefile.am: Likewise.
	* include/Makefile.am: Likewise.
	* examples/Makefile.am: Likewise.
