@@ -1,3 +1,3 @@
-D:EQ:({r1,r2},{}):({b},{a})
-D:EQ:({r2},{r1}):({b},{a})
-D:EQ:({r2},{}):({b},{a})
+D:EQ:({r1,r2},{}):({b},{a},{})
+D:EQ:({r2},{r1}):({b},{a},{})
+D:EQ:({r2},{}):({b},{a},{})
