@@ -1,18 +1,18 @@
-D:EQ:({r1,r2,r3,r4},{}):({b},{a})
-D:EQ:({r1,r3,r4},{}):({b},{a})
-D:EQ:({r1,r2,r3},{}):({b},{a})
-D:EQ:({r1,r3},{}):({b},{a})
-D:EQ:({r2,r3,r4},{r1}):({b},{a})
-D:EQ:({r3,r4},{r1}):({b},{a})
-D:EQ:({r2,r3},{r1}):({b},{a})
-D:EQ:({r3},{r1}):({b},{a})
-D:EQ:({r2,r3,r4},{}):({b},{a})
-D:EQ:({r3,r4},{}):({b},{a})
-D:EQ:({r2,r3},{}):({b},{a})
-D:EQ:({r3},{}):({b},{a})
-D:EQ:({r1,r3,r4},{r2}):({b},{d,a})
-D:EQ:({r1,r3,r4},{}):({b},{d,a})
-D:EQ:({r3,r4},{r1,r2}):({b},{d,a})
-D:EQ:({r3,r4},{r2}):({b},{d,a})
-D:EQ:({r3,r4},{r1}):({b},{d,a})
-D:EQ:({r3,r4},{}):({b},{d,a})
+D:EQ:({r1,r2,r3,r4},{}):({b},{a},{})
+D:EQ:({r1,r3,r4},{}):({b},{a},{})
+D:EQ:({r1,r2,r3},{}):({b},{a},{})
+D:EQ:({r1,r3},{}):({b},{a},{})
+D:EQ:({r2,r3,r4},{r1}):({b},{a},{})
+D:EQ:({r3,r4},{r1}):({b},{a},{})
+D:EQ:({r2,r3},{r1}):({b},{a},{})
+D:EQ:({r3},{r1}):({b},{a},{})
+D:EQ:({r2,r3,r4},{}):({b},{a},{})
+D:EQ:({r3,r4},{}):({b},{a},{})
+D:EQ:({r2,r3},{}):({b},{a},{})
+D:EQ:({r3},{}):({b},{a},{})
+D:EQ:({r1,r3,r4},{r2}):({b},{d,a},{})
+D:EQ:({r1,r3,r4},{}):({b},{d,a},{})
+D:EQ:({r3,r4},{r1,r2}):({b},{d,a},{})
+D:EQ:({r3,r4},{r2}):({b},{d,a},{})
+D:EQ:({r3,r4},{r1}):({b},{d,a},{})
+D:EQ:({r3,r4},{}):({b},{d,a},{})
