@@ -1,21 +1,21 @@
-D:EQ:({r1,r2,r3,r4},{}):({b},{a})
-D:EQ:({r1,r3,r4},{}):({b},{a})
-D:EQ:({r1,r2,r3},{}):({b},{a})
-D:EQ:({r1,r3},{}):({b},{a})
-D:EQ:({r2,r3,r4},{r1}):({b},{a})
-D:EQ:({r3,r4},{r1}):({b},{a})
-D:EQ:({r2,r3},{r1}):({b},{a})
-D:EQ:({r3},{r1}):({b},{a})
-D:EQ:({r2,r3,r4},{}):({b},{a})
-D:EQ:({r3,r4},{}):({b},{a})
-D:EQ:({r2,r3},{}):({b},{a})
-D:EQ:({r3},{}):({b},{a})
-D:EQ:({r1,r3,r4},{r2}):({b},{d,a})
-D:EQ:({r1,r3,r4},{}):({b},{d,a})
-D:EQ:({r3,r4},{r1,r2}):({b},{d,a})
-D:EQ:({r3,r4},{r2}):({b},{d,a})
-D:EQ:({r3,r4},{r1}):({b},{d,a})
-D:EQ:({r3,r4},{}):({b},{d,a})
+D:EQ:({r1,r2,r3,r4},{}):({b},{a},{})
+D:EQ:({r1,r3,r4},{}):({b},{a},{})
+D:EQ:({r1,r2,r3},{}):({b},{a},{})
+D:EQ:({r1,r3},{}):({b},{a},{})
+D:EQ:({r2,r3,r4},{r1}):({b},{a},{})
+D:EQ:({r3,r4},{r1}):({b},{a},{})
+D:EQ:({r2,r3},{r1}):({b},{a},{})
+D:EQ:({r3},{r1}):({b},{a},{})
+D:EQ:({r2,r3,r4},{}):({b},{a},{})
+D:EQ:({r3,r4},{}):({b},{a},{})
+D:EQ:({r2,r3},{}):({b},{a},{})
+D:EQ:({r3},{}):({b},{a},{})
+D:EQ:({r1,r3,r4},{r2}):({b},{d,a},{})
+D:EQ:({r1,r3,r4},{}):({b},{d,a},{})
+D:EQ:({r3,r4},{r1,r2}):({b},{d,a},{})
+D:EQ:({r3,r4},{r2}):({b},{d,a},{})
+D:EQ:({r3,r4},{r1}):({b},{d,a},{})
+D:EQ:({r3,r4},{}):({b},{d,a},{})
 E:({r3},{})
 E:({r1,r3},{})
 E:({r2,r3},{})
@@ -145,4 +145,4 @@ E:({r1,r3,r4},{r1,r2,r3,r4})
 E:({r2,r3,r4},{r1,r2,r3,r4})
 E:({r1,r2,r3,r4},{r1,r2,r3,r4})
 Em:({r3},{})
-Dm:EQ:({r3},{}):({b},{a})
+Dm:EQ:({r3},{}):({b},{a},{})
