@@ -1,6 +1,6 @@
-D:EQ:({r1,r2},{}):({a})
-D:EQ:({r2},{r1}):({a})
-D:EQ:({r2},{}):({a})
+D:EQ:({r1,r2},{}):({a},{})
+D:EQ:({r2},{r1}):({a},{})
+D:EQ:({r2},{}):({a},{})
 E:({r2},{})
 E:({r1,r2},{})
 E:({r2},{r1})
@@ -10,4 +10,4 @@ E:({r1,r2},{r2})
 E:({r2},{r1,r2})
 E:({r1,r2},{r1,r2})
 Em:({r2},{})
-Dm:EQ:({r2},{}):({a})
+Dm:EQ:({r2},{}):({a},{})
