@@ -1,4 +1,4 @@
-D:EQ:({r1,r2,r3},{}):({na},{nb},{nc})
+D:EQ:({r1,r2,r3},{}):({na},{nb},{nc},{})
 D:EQ:({r1,r3},{r2}):({na},{nb},{nc},{})
 D:EQ:({r1,r3},{}):({na},{nb},{nc},{})
 D:EQ:({r3},{r1,r2}):({na},{nb},{nc},{})
