@@ -1,13 +1,13 @@
-D:EQ:({r1,r2,r3},{}):({},{},{})
-D:EQ:({r1,r3},{r2}):({},{},{c})
-D:EQ:({r1},{r2}):({},{},{c})
-D:EQ:({r1,r3},{}):({},{},{c})
-D:EQ:({r1},{}):({},{},{c})
-D:EQ:({r2,r3},{r1}):({},{b},{})
-D:EQ:({r3},{r1}):({},{b},{})
-D:EQ:({r2,r3},{}):({},{b},{})
-D:EQ:({r3},{}):({},{b},{})
-D:EQ:({r3},{r1,r2}):({},{b},{c})
-D:EQ:({},{r1,r2}):({},{b},{c})
-D:EQ:({r3},{r2}):({},{b},{c})
-D:EQ:({},{r2}):({},{b},{c})
+D:EQ:({r1,r2,r3},{}):({},{},{},{})
+D:EQ:({r1,r3},{r2}):({},{},{c},{})
+D:EQ:({r1},{r2}):({},{},{c},{})
+D:EQ:({r1,r3},{}):({},{},{c},{})
+D:EQ:({r1},{}):({},{},{c},{})
+D:EQ:({r2,r3},{r1}):({},{b},{},{})
+D:EQ:({r3},{r1}):({},{b},{},{})
+D:EQ:({r2,r3},{}):({},{b},{},{})
+D:EQ:({r3},{}):({},{b},{},{})
+D:EQ:({r3},{r1,r2}):({},{b},{c},{})
+D:EQ:({},{r1,r2}):({},{b},{c},{})
+D:EQ:({r3},{r2}):({},{b},{c},{})
+D:EQ:({},{r2}):({},{b},{c},{})
