@@ -1,16 +1,16 @@
-D:EQ:({r1,r2,r3},{}):({},{},{})
-D:EQ:({r1,r3},{r2}):({},{},{c})
-D:EQ:({r1},{r2}):({},{},{c})
-D:EQ:({r1,r3},{}):({},{},{c})
-D:EQ:({r1},{}):({},{},{c})
-D:EQ:({r2,r3},{r1}):({},{b},{})
-D:EQ:({r3},{r1}):({},{b},{})
-D:EQ:({r2,r3},{}):({},{b},{})
-D:EQ:({r3},{}):({},{b},{})
-D:EQ:({r3},{r1,r2}):({},{b},{c})
-D:EQ:({},{r1,r2}):({},{b},{c})
-D:EQ:({r3},{r2}):({},{b},{c})
-D:EQ:({},{r2}):({},{b},{c})
+D:EQ:({r1,r2,r3},{}):({},{},{},{})
+D:EQ:({r1,r3},{r2}):({},{},{c},{})
+D:EQ:({r1},{r2}):({},{},{c},{})
+D:EQ:({r1,r3},{}):({},{},{c},{})
+D:EQ:({r1},{}):({},{},{c},{})
+D:EQ:({r2,r3},{r1}):({},{b},{},{})
+D:EQ:({r3},{r1}):({},{b},{},{})
+D:EQ:({r2,r3},{}):({},{b},{},{})
+D:EQ:({r3},{}):({},{b},{},{})
+D:EQ:({r3},{r1,r2}):({},{b},{c},{})
+D:EQ:({},{r1,r2}):({},{b},{c},{})
+D:EQ:({r3},{r2}):({},{b},{c},{})
+D:EQ:({},{r2}):({},{b},{c},{})
 E:({r1,r3},{r2})
 E:({r1,r2,r3},{r2})
 E:({r1,r3},{r1,r2})
@@ -20,6 +20,6 @@ E:({r1,r2,r3},{r2,r3})
 E:({r1,r3},{r1,r2,r3})
 E:({r1,r2,r3},{r1,r2,r3})
 Em:({r1,r3},{r2})
-Dm:EQ:({r1},{}):({},{},{c})
-Dm:EQ:({r3},{}):({},{b},{})
-Dm:EQ:({},{r2}):({},{b},{c})
+Dm:EQ:({r1},{}):({},{},{c},{})
+Dm:EQ:({r3},{}):({},{b},{},{})
+Dm:EQ:({},{r2}):({},{b},{c},{})
