@@ -1,3 +1,3 @@
-Dm:EQ:({r1},{}):({},{},{c})
-Dm:EQ:({r3},{}):({},{b},{})
-Dm:EQ:({},{r2}):({},{b},{c})
+Dm:EQ:({r1},{}):({},{},{c},{})
+Dm:EQ:({r3},{}):({},{b},{},{})
+Dm:EQ:({},{r2}):({},{b},{c},{})
