@@ -1,5 +1,5 @@
 Em:({r1,r2,r4},{r5})
-Dm:EQ:({r1},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{})
+Dm:EQ:({r1},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{},{})
 Dm:EQ:({r2},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{pneumonia},{})
 Dm:EQ:({r4},{}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{})
 Dm:EQ:({},{r5}):({allergy_strong_ab},{blood_marker,xray_pneumonia},{atyppneumonia,pneumonia},{})
